Integrate new ImmutableList class of crypto-primitives.